# ServiceX-Local

./: .gitignore  README.md  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  pypi.yaml  uploadDocs.yaml
docs/source/: conf.py  configuration.md  index.md  local_deliver.md  local_get_structure.md  setup.md
servicex_local/: __init__.py  adaptor.py  codegen.py  codegen_xaod_local.py  configurations.py  create_x509.py  deliver.py  helper.py  logging_decorator.py  science_images.py  science_wsl2.py  user_utils.py  utils.py
servicex_local/templates/: transform_single_file.sh
tests/: conftest.py  test_adaptor.py  test_codegen.py  test_deliver.py  test_integrated.py  test_logging_decorator.py  test_science_images.py  test_utils.py
tests/genfiles_raw/: generated_transformer.py
tests/genfiles_raw/query1_python/: transform_a_file.py  transformer_capabilities.json
tests/genfiles_raw/query1_raw/: transformer_capabilities.json
tests/genfiles_raw/query2_bash/: transform_a_file.sh
tests/genfiles_raw/query2_xaod/: ATestRun_eljob.py  package_CMakeLists.txt  query.cxx  query.h  runner.sh  transform_single_file.sh  transformer_capabilities.json  wsl_transform_script.sh
tests/genfiles_raw/query3_bash_exit_error/: transform_a_file.sh  transformer_capabilities.json
tests/genfiles_raw/query5_python_exception_error/: transform_a_file.py
tests/genfiles_raw/query6_logging/: transform_a_file.py
tests/genfiles_raw/query7_logging_warnings/: transform_a_file.py
tests/genfiles_raw/query8_stderr/: transform_a_file.sh
