[build-system]
requires = ["hatchling>=1.13.0"]
build-backend = "hatchling.build"

[project]
name = "servicex-local"
version = "0.0.1"
description = "Enables a local backend for ServiceX"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
authors = [{ name = "Gordon Watts", email = "gwatts@uw.edu" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["servicex>=3.0.0", "tenacity", "requests-toolbelt"]

[project.urls]
# Documentation = "https://servicex.readthedocs.io/"
# Homepage = "https://github.com/ssl-hep/ServiceX_frontend"
# "Issue Tracker" = "https://github.com/ssl-hep/ServiceX_frontend/issues"
# "Release Notes" = "https://github.com/ssl-hep/ServiceX_frontend/releases"
# "Releases" = "https://github.com/ssl-hep/ServiceX_frontend/releases"
# "Source Code" = "https://github.com/ssl-hep/ServiceX_frontend"

[project.optional-dependencies]

# Developer extras
test = [
    "pytest>=7.2.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "pytest-console-scripts>=1.4.1",
    "pytest-asyncio>=0.21.0",
    "flake8>=5.0.4",
    "black",
]
docs = [
    "sphinx>=7.0.1",
    "furo>=2023.5.20",
    "sphinx-code-include>=1.4.0",
    "myst-parser>=3.0.1",
    "autodoc-pydantic==2.2.0",
    "sphinx-tabs>=3.4.5",
    "sphinx-copybutton>=0.5.2",
]
develop = ["servicex[test,docs]"]

[tool.hatch.build.targets.sdist]
# hatchling always includes:
# pyproject.toml, .gitignore, any README, any LICENSE, AUTHORS
include = ["/servicex_local/"]

[tool.hatch.build.targets.wheel]
packages = ["servicex_local"]

[tool.coverage.run]
dynamic_context = "test_function"

[tool.flake8]
max-line-length = 99
